# hot-keys-v2

./: .gitignore  LICENSE  README.md  bump-version.cjs  create-release.sh  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: ipc.rs  main.rs  models.rs  utils.rs
src/assets/fonts/: fonts.css
src/components/: command.tsx  commands.tsx  divider.tsx  footer.tsx
src/hooks/: useAsyncEffect.ts  useCommands.ts  useFocus.ts  useGlobalState.ts  useKey.ts  useSearchInput.ts  useTheme.ts  useToggleUi.ts
src/lib/: clientCommand.ts  ipc.ts  modifierKeyMap.ts
