[package]
name = "hot-keys-v2"
version = "0.0.0"
description = "An app for shortcuts"
authors = ["Hayes Barber"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "macos-private-api", "global-shortcut-all", "system-tray"] }
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5.0.1"
once_cell = "1.19.0"
glob = "0.3.1"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
